Preventing text inside buttons and tabs from wrapping.

--- a/css/jqface.less
+++ b/css/jqface.less
@@ -100,7 +100,8 @@
   text-align: center;
   text-decoration: none;
   text-shadow: white 0 1px 1px;
-  vertical-align:middle;
+  vertical-align: middle;
+  white-space: nowrap;
   :active {
     .jqf-gradient-inset;
     background-color: @background-color;
